# code-jam-2022

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  dev-requirements.txt  docker-compose.yml  mypy.ini  pyproject.toml
.github/workflows/: autoblack.yaml  black.yaml  codecov.yaml  mypy.yaml  tests.yaml
sirenity/: __main__.py  app.py  client.py  euler.csv  game_manager.py  message.py
sirenity/code/: __init__.py  allowed_nodes.txt  handler.py
sirenity/euler/: __init__.py  create_sources.py  problem.py  problem_manager.py  problems.db  problems_manager.py
sirenity/euler/sources/: prompts.txt  solutions.txt
sirenity/problems/: __init__.py  problem.py  problems_manager.py
sirenity/problems/sources/: prompts.txt  solutions.txt
sirenity/setup/: setup_project_euler.py
sirenity/static/: btn-style.css  code.css  send-code.js
sirenity/templates/: index.html  send-code.html
static/: send-code.js
templates/: create.html  index.html  send-code.html
test/: __init__.py  test_main.py
tests/: test.db  test_main.py  test_problems.py
