[tool.poetry]
name = "sirenity"
version = "0.1.0"
description = ""
authors = []
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.*"

[tool.poetry.dev-dependencies]
flake8 = "~4.0.1"
isort = "~5.10.1"
pre-commit = "~2.17.0"

flake8-docstrings = "~1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
