[project]
dependencies = [
    "python=3.10.*",
    "fastapi=0.79.0",
    "uvicorn=0.18.2",
    "jinja2=3.1.2",
]

[tool.poetry]
name = "sirenity"
version = "0.1.0"
description = ""
authors = []
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.*"
fastapi = "0.79.0"
uvicorn = "0.18.2"
jinja2 = "3.1.2"
beautifulsoup4 = "~4.11.1"
requests = "~2.28.1"

[tool.poetry.dev-dependencies]
flake8 = "~4.0.1"
isort = "~5.10.1"
pre-commit = "~2.17.0"
pytest = "~7.1.2"


flake8-docstrings = "~1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
